# HelloWorld

cmake-general/: CMakeLists.txt
cmake-general/cmake/: program.cmake  project.cmake  sharedlib.cmake  staticlib.cmake
cmake-general/src/: CMakeLists.txt  main.cpp
cmake-general/src/hellolib/: CMakeLists.txt  hello.cpp
cmake-general/src/server/: CMakeLists.txt  main.cpp
cmake-general/src/sharedlib/: CMakeLists.txt  hello.cpp  hello.h
cmake-general/src/staticlib/: CMakeLists.txt  hello.cpp  hello_static.h
