ADD_EXECUTABLE (hello-world main)

ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/src/staticlib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/staticlib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/src/staticlib)
TARGET_LINK_LIBRARIES(hello-world hellos)

ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/src/sharedlib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/sharedlib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/src/sharedlib)
TARGET_LINK_LIBRARIES(hello-world hello)
